--- a/Dip123/Dip123.csproj
+++ b/Dip123/Dip123.csproj
@@ -71,6 +71,24 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="ZefirView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ZefirView.Designer.cs">
+      <DependentUpon>ZefirView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PastilaView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PastilaView.Designer.cs">
+      <DependentUpon>PastilaView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainView.Designer.cs">
+      <DependentUpon>MainView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -78,6 +96,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainView.resx">
+      <DependentUpon>MainView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PastilaView.resx">
+      <DependentUpon>PastilaView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -88,6 +112,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ZefirView.resx">
+      <DependentUpon>ZefirView.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="database.xlsx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
